--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,49 +1,56 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Log in!
+{% block title %}Connexion
 {% endblock %}
 
 {% block body %}
-	<div class="container">
-		<form method="post">
-			{% if error %}
-				<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-			{% endif %}
+	<div class="container mt-5">
+		<div class="row justify-content-center">
+			<div class="col-md-6">
+				<div class="card">
+					<div class="card-header">
+						<h1 class="card-title">Connexion</h1>
+					</div>
+					<div class="card-body">
+						<form method="post">
+							{% if error %}
+								<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+							{% endif %}
 
-			{% if app.user %}
-				<div class="mb-3">
-					Connecté avec :
-					{{ app.user.userIdentifier }},
-					<a href="{{ path('app_logout') }}">Se déconnecter</a>
+							{% if app.user %}
+								<div class="mb-3">
+									Connecté avec :
+									{{ app.user.userIdentifier }},
+									<a href="{{ path('app_logout') }}">Se déconnecter</a>
+								</div>
+							{% endif %}
+
+							<div class="form-group">
+								<label for="username">Email</label>
+								<input type="email" value="{{ last_username }}" name="_username" id="username" class="form-control" autocomplete="email" required autofocus>
+							</div>
+							<div class="form-group">
+								<label for="password">Mot de passe</label>
+								<input type="password" name="_password" id="password" class="form-control" autocomplete="current-password" required>
+							</div>
+
+							<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+
+							<div class="form-check mb-3">
+								<input type="checkbox" name="_remember_me" id="_remember_me" class="form-check-input">
+								<label for="_remember_me" class="form-check-label">Se souvenir de moi</label>
+							</div>
+
+							<button class="btn btn-lg btn-primary btn-block" type="submit">
+								Se connecter
+							</button>
+						</form>
+						<div class="text-center mt-3">
+							<a href="{{ path('app_register') }}">Pas encore de compte ? Inscris-toi !</a>
+						</div>
+					</div>
 				</div>
-			{% endif %}
-
-			<h1 class="h3 mb-3 font-weight-normal">Connexion</h1>
-			<label for="username">Email</label>
-			<input type="email" value="{{ last_username }}" name="_username" id="username" class="form-control" autocomplete="email" required autofocus>
-			<label for="password">Mot de passe</label>
-			<input type="password" name="_password" id="password" class="form-control" autocomplete="current-password" required>
-
-			<input
-			type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-
-			{#
-			            Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-			            See https://symfony.com/doc/current/security/remember_me.html
-			
-			            <div class="checkbox mb-3">
-			                <input type="checkbox" name="_remember_me" id="_remember_me">
-			                <label for="_remember_me">Remember me</label>
-			            </div>
-			        #}
-
-			<button class="btn btn-lg btn-primary mt-3" type="submit">
-				Se connecter
-			</button>
-			<br>
-			<a class="mt-3" href="{{ path('app_register') }}">Pas encore de compte ?
-				<br>
-				Inscris-toi !</a>
-		</form>
+			</div>
+		</div>
 	</div>
 {% endblock %}
