--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,81 +1,184 @@
+body {
+	background-color: #abfae92d;
+	/* background-color: #f7d49371; */
+}
+
+.logo-img {
+	/* width: 220px;
+	height: 100px; */
+	margin-left: 20px;
+}
+
+a.navbar-brand {
+	padding: 0;
+}
+
+a.nav-link {
+	font-size: 20px;
+	align-items: end;
+	margin-right: 15px;
+	margin-top: 10px;
+	margin-left: 10px;
+}
+
+nav.navbar.navbar-expand-lg.navbar-light.bg-white {
+	padding: 0;
+}
+
 .calendars-container {
-    display: flex;
-    justify-content: space-around;
+	display: flex;
+	justify-content: space-around;
 }
 
 .calendar {
-    flex: 1;
-    margin: 10px;
+	flex: 1;
+	margin: 10px;
 }
 
 table {
-    width: 100%;
-    border-collapse: collapse;
+	width: 100%;
+	border-collapse: collapse;
 }
 
-th, td {
-    border: 1px solid #ccc;
-    padding: 10px;
-    text-align: center;
-    vertical-align: top;
+table a {
+	text-transform: uppercase;
+}
+
+th,
+td {
+	border: 1px solid #ccc;
+	padding: 10px;
+	text-align: center;
+	vertical-align: top;
 }
 
 th {
-    background-color: #f4f4f4;
-    /* min-width: 100px; */
+	background-color: #f4f4f4;
+	min-width: 178px;
 }
 
 .hsam {
-    max-width: 30% !important;
+	max-width: 30% !important;
 }
 
 .session {
-    margin: 5px 0;
+	margin: 5px 0;
 }
 
 .reserve-btn {
-    display: inline-block;
-    padding: 5px 10px;
-    background-color: #4CAF50;
-    color: white;
-    text-decoration: none;
-    border-radius: 3px;
+	display: inline-block;
+	padding: 5px 10px;
+	background-color: #4caf50;
+	color: white;
+	text-decoration: none;
+	border-radius: 3px;
 }
 
 .reserve-btn:hover {
-    background-color: #45a049;
+	background-color: #45a049;
 }
 
 button[disabled] {
-    background-color: #ccc;
-    color: #777;
-    cursor: not-allowed;
+	background-color: #ccc;
+	color: #777;
+	cursor: not-allowed;
 }
 
 .calendar-navigation {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 20px;
+	display: flex;
+	justify-content: space-between;
+	margin-bottom: 20px;
 }
 
 .calendar-navigation a {
-    text-decoration: none;
-    color: #007bff;
+	text-decoration: none;
+	color: #007bff;
 }
 
 .calendar-navigation a:hover {
-    text-decoration: underline;
+	text-decoration: underline;
 }
 
 .flash-error {
-    background-color: #f8d7da;
-    color: #721c24;
-    padding: 10px;
-    margin-bottom: 20px;
-    border: 1px solid #f5c6cb;
-    border-radius: 3px;
+	background-color: #f8d7da;
+	color: #721c24;
+	padding: 10px;
+	margin-bottom: 20px;
+	border: 1px solid #f5c6cb;
+	border-radius: 3px;
 }
 
 .dn {
-    display: none;
+	display: none;
+}
+
+.container-fluid {
+	padding-left: 0;
+}
+
+.jumbotron {
+	background-color: #fff;
+	font-size: 22px;
+	width: 80%;
+	text-align: center;
+	margin: 0 auto;
+	border-radius: 20px;
+}
+
+.jumbotron h1 {
+	font-size: 45px;
+}
+
+.lead {
+	font-size: 1.6rem;
+	font-weight: 600;
+	color: red;
+}
+
+/* .navbar>.container-fluid {
+	 align-items: end; 
+} */
+
+.table-responsive {
+    overflow-x: auto;
+}
+
+.container {
+	max-width: 1650px;
+}
+
+span.badge.badge-success.mt-2.p-2.text-uppercase {
+	font-weight: 600;
+	margin-left: 5px;
+}
+
+@media screen and (max-width: 1500px) {
+	.col {
+		width: 100%;
+		margin: 0 auto;
+	}
+}
+
+@media screen and (max-width: 1200px) {
+	th {
+		min-width: 100px;
+	}
+	table {
+		font-size: 14px;
+	}
+	button.btn, a.btn {
+		font-size: 10px;
+	}
+}
+
+@media screen and (max-width: 860px) {
+	th {
+		min-width: 50px;
+	}
+	table {
+		font-size: 12px;
+	}
+	button.btn, a.btn {
+		font-size: 8px;
+	}
 }
