--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,86 +1,87 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <title>
-        {% block title %}Bienvenue !
-        {% endblock %}
-    </title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="{{ asset('styles/style.css') }}">
-    {% block stylesheets %}{% endblock %}
-</head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="/">AirStudio73</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link" href="/">Accueil</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('coach_list') }}">Coach</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('course_details_list') }}">Cours</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('event_list') }}">Événements</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('calendar') }}">Calendrier</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('planning') }}">Planning</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/tarifs">Tarifs</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('contact') }}">Contact</a>
-                    </li>
-                    {% if is_granted('ROLE_ADMIN') %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Clients</a>
-                    </li>
-                    {% endif %}
-                </ul>
-                <ul class="navbar-nav">
-                    {% if app.user %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('app_logout') }}">Se déconnecter</a>
-                    </li>
-                    {% else %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('app_login') }}">Se connecter</a>
-                    </li>
-                    {% endif %}
-                </ul>
-            </div>
-        </div>
-    </nav>
+	<head>
+		<meta charset="UTF-8">
+		<title>
+			{% block title %}Bienvenue !
+			{% endblock %}
+		</title>
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+		<link rel="stylesheet" href="{{ asset('styles/bootstrap.min.css') }}">
+		<link rel="stylesheet" href="{{ asset('styles/style.css') }}"> {% block stylesheets %}{% endblock %}
+		</head>
+		<body>
+			<nav class="navbar navbar-expand-lg navbar-light bg-white">
+				<div class="container-fluid">
+					<a class="navbar-brand" href="/">
+						<img class="logo-img" src="{{ asset('images/logo2.jpg') }}" alt="AirStudio73"></a>
+					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+						<span class="navbar-toggler-icon"></span>
+					</button>
+					<div class="collapse navbar-collapse" id="navbarNav">
+						<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+							<li class="nav-item">
+								<a class="nav-link" href="/">Accueil</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="{{ path('coach_list') }}">Coach</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="{{ path('course_details_list') }}">Cours</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="{{ path('event_list') }}">Événements</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="{{ path('calendar') }}">Réservation</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="{{ path('planning') }}">Planning</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="/tarifs">Tarifs</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="{{ path('contact') }}">Contact</a>
+							</li>
+							{% if is_granted('ROLE_ADMIN') %}
+								<li class="nav-item">
+									<a class="nav-link" href="{{ path('admin_client_list') }}">Clients</a>
+								</li>
+							{% endif %}
+						</ul>
+						<ul class="navbar-nav">
+							{% if app.user %}
+								<li class="nav-item">
+									<a class="nav-link" href="{{ path('app_logout') }}">Se déconnecter</a>
+								</li>
+							{% else %}
+								<li class="nav-item">
+									<a class="nav-link" href="{{ path('app_login') }}">Se connecter</a>
+								</li>
+							{% endif %}
+						</ul>
+					</div>
+				</div>
+			</nav>
 
-    <div class="container p-2">
-        {% for message in app.flashes('success') %}
-            <div class="alert alert-success">
-                {{ message }}
-            </div>
-        {% endfor %}
-        {% for message in app.flashes('error') %}
-            <div class="alert alert-danger">
-                {{ message }}
-            </div>
-        {% endfor %}
-    </div>
+			<div class="container p-2">
+				{% for message in app.flashes('success') %}
+					<div class="alert alert-success">
+						{{ message }}
+					</div>
+				{% endfor %}
+				{% for message in app.flashes('error') %}
+					<div class="alert alert-danger">
+						{{ message }}
+					</div>
+				{% endfor %}
+			</div>
 
-    {% block body %}{% endblock %}
+			{% block body %}{% endblock %}
 
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
-    {% block javascripts %}{% endblock %}
-</body>
-</html>
+			<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+			<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
+			{% block javascripts %}{% endblock %}
+		</body>
+	</html>
