--- a/templates/calendar/index.html.twig
+++ b/templates/calendar/index.html.twig
@@ -3,6 +3,13 @@
 {% block body %}
 	<div class="container">
 		<h1>Calendrier des Cours</h1>
+		{% for label, messages in app.flashes %}
+			{% for message in messages %}
+				<div class="alert alert-{{ label }}">
+					{{ message }}
+				</div>
+			{% endfor %}
+		{% endfor %}
 		{# <p>Du {{ startOfWeek|date('d/m/Y') }} au {{ endOfWeek|date('d/m/Y') }}</p> #}
 		<div class="mb-3">
 			{% set prevWeek = currentWeek - 1 %}
@@ -24,19 +31,21 @@
 			{% set prevDate = startOfWeek|date_modify('-7 days')|date('Y-m-d') %}
 
 			{% if prevDate >= now %}
-				<a href="{{ path('calendar', { 'year': prevYear, 'week': prevWeek }) }}" class="btn btn-primary">&laquo; Semaine précédente</a>
+				<a href="{{ path('calendar', { 'year': prevYear, 'week': prevWeek }) }}" class="btn btn-primary">&laquo;</a>
 			{% else %}
-				<button class="btn btn-secondary" disabled>&laquo; Semaine précédente</button>
+				<button class="btn btn-secondary" disabled>&laquo;</button>
 			{% endif %}
-			<a href="{{ path('calendar', { 'year': nextYear, 'week': nextWeek }) }}" class="btn btn-primary">Semaine suivante &raquo;</a>
-			<a href="{{ path('calendar', { 'year': 'now'|date('Y'), 'week': 'now'|date('W') }) }}" class="btn btn-secondary">Semaine actuelle</a>
-			<a href="{{ path('course_new') }}" class="btn btn-success">Créer un cours</a>
+			<a href="{{ path('calendar', { 'year': 'now'|date('Y'), 'week': 'now'|date('W') }) }}" class="btn btn-success">Aujourd'hui</a>
+			<a href="{{ path('calendar', { 'year': nextYear, 'week': nextWeek }) }}" class="btn btn-primary">&raquo;</a>
+			{% if is_granted('ROLE_ADMIN') %}
+				<a href="{{ path('course_new') }}" class="btn btn-success">Créer un cours</a>
+			{% endif %}
 			<a href="{{ path('user_subscription') }}" class="btn btn-info">Mes forfaits</a>
-			<a href="{{ path('booking_manage') }}" class="btn btn-warning">Gérer mes réservations</a>
+			<a href="{{ path('booking_manage') }}" class="btn btn-info">Gérer mes réservations</a>
 		</div>
 
 		<div class="row">
-			<div class="col-md-8">
+			<div class="col col-9">
 				<table class="table table-bordered">
 					<thead class="thead-light">
 						<tr>
@@ -76,6 +85,8 @@
 											{% set course_bookings = bookings[course.id] %}
 											{% set bookings_count = course_bookings|length %}
 											{% set available_spots = course_capacity - bookings_count %}
+											{% set current_datetime = "now"|date('Y-m-d H:i:s') %}
+											{% set interval = (course.startTime|date('U') - "now"|date('U')) // 86400 %}
 											{% if app.user is not null %}
 												{% set user_booking = course_bookings|filter(b => b.user.id == app.user.id)|first %}
 											{% else %}
@@ -86,27 +97,50 @@
 												{% set duration = (course.endTime|date('U') - course.startTime|date('U')) // 1800 %}
 												{% if not course_found %}
 													<td rowspan="{{ duration }}">
-														<a href="{{ path('booking_new', { 'courseId': course.id }) }}">
+														<a href="{{ path('course_details_list', { 'courseId': course.id }) }}">
 															{{ course.name }}
 														</a>
 														<br>
 														{% if user_booking %}
 															{% if available_spots > 0 %}
-																{{ available_spots }}
-																places restantes
+																<span class="mt-3">
+																	{{ bookings_count }}
+																	/
+																	{{ course_capacity }}
+																</span>
 															{% else %}
 																<span class="badge badge-danger">Complet</span>
 															{% endif %}
-															<span class="badge badge-success">Réservé</span>
-															<a href="{{ path('booking_cancel', { 'bookingId': user_booking.id }) }}" class="btn btn-danger btn-sm">Annuler</a>
+															<span class="badge badge-success mt-2 p-2 text-uppercase">Réservé</span>
+															{% if interval >= 3 %}
+																<br>
+																<a href="{{ path('booking_cancel', { 'bookingId': user_booking.id }) }}" class="btn btn-danger btn-sm mt-2">Annuler</a>
+															{% else %}
+																<br>
+																<button class="btn btn-secondary btn-sm mt-2" disabled>Annulation impossible</button>
+															{% endif %}
 														{% else %}
 															{% if available_spots > 0 %}
-																{{ available_spots }}
-																places restantes
-																<a href="{{ path('booking_new', { 'courseId': course.id }) }}" class="btn btn-primary btn-sm">Réserver</a>
+																<span class="mt-3">
+																	{{ bookings_count }}
+																	/
+																	{{ course_capacity }}
+																</span>
+																<br>
+																<a href="{{ path('booking_new', { 'courseId': course.id }) }}" class="btn btn-primary btn-sm mt-2">Réserver</a>
 															{% else %}
 																<span class="badge badge-danger">Complet</span>
 															{% endif %}
+														{% endif %}
+														{% if is_granted('ROLE_ADMIN') %}
+															<form action="{{ path('course_update_capacity', {id: course.id}) }}" method="POST" class="mt-2">
+																<input type="hidden" name="year" value="{{ currentYear }}">
+																<input type="hidden" name="week" value="{{ currentWeek }}">
+																<button type="submit" name="action" value="increase" class="btn btn-sm btn-outline-success">+</button>
+																<button type="submit" name="action" value="decrease" class="btn btn-sm btn-outline-danger">-</button>
+																<span>Capacité :
+																	{{ course_capacity }}</span>
+															</form>
 														{% endif %}
 													</td>
 													{% set course_found = true %}
@@ -128,7 +162,7 @@
 				</table>
 			</div>
 
-			<div class="col-md-4">
+			<div class="col col-3">
 				<table class="table table-bordered">
 					<thead class="thead-light">
 						<tr>
@@ -158,6 +192,9 @@
 										{% set course_bookings = bookings[course.id] %}
 										{% set bookings_count = course_bookings|length %}
 										{% set available_spots = course_capacity - bookings_count %}
+										{% set current_datetime = "now"|date('Y-m-d H:i:s') %}
+										{% set course_datetime = course.startTime|date('Y-m-d H:i:s') %}
+										{% set interval = (course.startTime|date('U') - "now"|date('U')) // 86400 %}
 										{% if app.user is not null %}
 											{% set user_booking = course_bookings|filter(b => b.user.id == app.user.id)|first %}
 										{% else %}
@@ -177,8 +214,9 @@
 														<a href="{{ path('booking_cancel', { 'bookingId': user_booking.id }) }}" class="btn btn-danger btn-sm">Annuler</a>
 													{% else %}
 														{% if available_spots > 0 %}
-															{{ available_spots }}
-															places restantes
+															{{ bookings_count }}
+															/
+															{{ course_capacity }}
 															<a href="{{ path('booking_new', { 'courseId': course.id }) }}" class="btn btn-primary btn-sm">Réserver</a>
 														{% else %}
 															<span class="badge badge-danger">Complet</span>
