--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,15 +1,16 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Accueil{% endblock %}
+{% block title %}Accueil - Site en cours de création{% endblock %}
 
 {% block body %}
 <div class="container mt-5">
-    <div class="jumbotron">
-        <h1 class="display-4">Bienvenue sur la page d'accueil</h1>
-        <p class="lead">Réservez vos cours en toute simplicité.</p>
+    <div class="jumbotron text-center">
+        <h1 class="display-4">Bienvenue sur notre site en construction</h1>
+        <p class="lead">Nous travaillons activement à la création de notre nouveau site web.</p>
         <hr class="my-4">
-        <p>Accédez à notre calendrier pour voir les cours disponibles et réserver.</p>
-        <a class="btn btn-primary btn-lg" href="{{ path('calendar') }}" role="button">Réserver</a>
+        <p>Malgré cela, vous pouvez dès maintenant réserver vos cours via notre <a href="{{ path('calendar') }}"> calendrier en ligne.</a></p>
+        <a class="btn btn-primary btn-lg" href="{{ path('calendar') }}" role="button">Accéder au Calendrier et Réserver</a>
+        <p class="mt-4">Restez à l'écoute pour plus de fonctionnalités à venir bientôt !</p>
     </div>
 </div>
 {% endblock %}
