--- a/templates/admin/client_list.html.twig
+++ b/templates/admin/client_list.html.twig
@@ -28,8 +28,8 @@
                         <td>{{ user.notes }}</td>
                         <td>{{ user.roles|join(', ') }}</td>
                         <td>
-                            <a href="{{ path('admin_client_edit', {'id': user.id}) }}" class="btn btn-secondary btn-sm">Modifier</a>
-                            <a href="{{ path('admin_client_delete', {'id': user.id}) }}" class="btn btn-danger btn-sm" onclick="return confirm('Êtes-vous sûr de vouloir supprimer ce client ?');">Supprimer</a>
+                            <a href="{{ path('admin_client_edit', {'id': user.id}) }}" class="btn btn-info btn-sm">Modifier</a>
+                            <a href="{{ path('admin_client_delete', {'id': user.id}) }}" class="btn btn-danger btn-sm mt-1" onclick="return confirm('Êtes-vous sûr de vouloir supprimer ce client ?');">Supprimer</a>
                         </td>
                     </tr>
                 {% else %}
