--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,6 +6,7 @@
 			{% block title %}Bienvenue !
 			{% endblock %}
 		</title>
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 		<link rel="stylesheet" href="{{ asset('styles/bootstrap.min.css') }}">
 		<link rel="stylesheet" href="{{ asset('styles/style.css') }}"> {% block stylesheets %}{% endblock %}
@@ -43,6 +44,9 @@
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="{{ path('contact') }}">Contact</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="{{ path('photo_gallery') }}">Gallerie</a>
 							</li>
 							{% if is_granted('ROLE_ADMIN') %}
 								<li class="nav-item">
@@ -82,6 +86,7 @@
 
 			<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 			<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
+			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 			{% block javascripts %}{% endblock %}
 		</body>
 	</html>
